manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "pallok8s-a10a"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "pallok8s-a10a"
  template:
    metadata:
      labels:
        app: "pallok8s-a10a"
    spec:
      containers:
        - name: "pallok8s-a10a"
          image: "pallooacr.azurecr.io/pallok8s"
          ports:
          - containerPort: 80
