manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "pallok8s-a10a"
    labels:
        app: "pallok8s-a10a"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "pallok8s-a10a"
